# thedeckgame

./: .gitignore  CNAME  README.md  index.html  render.yaml  sitemap.xml
about/: index.html
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_game_soft_delete.py  0003_game_date.py
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py  security.py  storage.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/routers/: admin.py  applications.py  files.py  games.py  me.py
apps/api/app/schemas/: __init__.py  application.py  file.py  game.py  user.py
apps/api/app/services/: questions.py
apps/web/: .env.example  index.html  package-lock.json  package.json
apps/web/public/: robots.txt  sitemap.xml
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/components/: CardTile.tsx  DeckGrid.tsx  FileUpload.tsx  Layout.tsx  ProtectedRoute.tsx  QuestionBuilder.tsx  QuestionRenderer.tsx  SuitGrid.tsx  builder.css  deck.css
apps/web/src/lib/: api.ts  auth.tsx  games.ts  supabase.ts  types.ts
apps/web/src/routes/: About.tsx  ApplicationDetail.tsx  Apply.tsx  CardDetail.tsx  Home.tsx  Login.tsx  MyApplications.tsx  Profile.tsx  card-detail.css  home.css
apps/web/src/routes/admin/: AdminGames.tsx  GameEditor.tsx  GameReview.tsx
apps/web/src/styles/: global.css
diamonds/5/: index.html
